--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7760,4 +7760,5 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
      <string name="headset_find_right_tip">Zdá sa, že pravé slúchadlo máte v puzdre alebo v uchu</string>
      <string name="miheadset_connect_device_hfp">Pripojte slúchadlá a uistite sa, že je povolené prehrávanie zvuku pre telefónne hovory</string>
      <string name="miheadset_firmware_version_update">Aktualizovať firmvér</string>
+    <string name="legacy_power_menu">Stará ponuka vypínania</string>     
 </resources>
