--- a/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
+++ b/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
@@ -979,5 +979,149 @@ Získali ste ďalších %1$s"</string>
      <string name="widget_choose_fragment_title">Vyberte typ súboru</string>
      <string name="widget_finish">Hotovo</string>
     <string name="import_files_from_old_phones">Importovať</string>
-                    
+<string name="recent_hide_cloud_drive_files">Nezobrazovať súbory z Mi Drive v Nedávnych</string>
+<string name="reminder_card_title">Upozornenie</string>
+<string name="manage_cloud_space">Správa cloudového úložiska</string>  
+
+                  <string name="abc_action_mode_done">Hotovo</string>
+     <string name="abc_activity_chooser_view_see_all">Zobraziť všetko</string>
+     <string name="abc_activitychooserview_choose_application">Vyberte aplikáciu</string>
+     <string name="abc_capital_off">VYPNUTÉ</string>
+     <string name="abc_capital_on">ZAPNUTÉ</string>
+     <string name="abc_search_hint">Hľadanie…</string>
+     <string name="abc_searchview_description_clear">Vymazať otázku</string>
+     <string name="abc_searchview_description_query">Vyhľadávací dopyt</string>
+     <string name="abc_searchview_description_search">Hľadať</string>
+     <string name="abc_searchview_description_submit">Odoslať otázku</string>
+     <string name="abc_searchview_description_voice">Hlasové vyhľadávanie</string>
+     <string name="abc_shareactionprovider_share_with">Zdieľať s</string>
+     <string name="abc_shareactionprovider_share_with_application">Zdieľať s %s</string>
+     <string name="abc_toolbar_collapse_description">Zbaliť</string>
+     <string name="action_cache_to_local">Stiahnuť do zariadenia</string>
+     <string name="action_release_file_cache">Vymazať vyrovnávaciu pamäť</string>
+     <string name="actionbar_button_up_description">Späť</string>
+     <string name="ad_download">Stiahnuť</string>
+     <string name="afternoon">Popoludní</string>
+     <string name="cancel_mi_drive">Zrušiť služby Mi Drive</string>
+     <string name="cancel_mi_drive_privacy_revoked_retry">Zapnite Mi Drive a skúste to znova</string>
+     <string name="cancel_mi_drive_success">Služby boli úspešne zrušené</string>
+     <string name="cancel_mi_drive_title">Zrušiť služby</string>
+     <string name="category_cloud_drive">Mi Drive</string>
+<string name="clear_text_end_icon_content_description">Vymazať text</string>
+     <string name="clearable_edittext_clear_description">Vymazať</string>
+     <string name="clock_in">Prihlasovanie…</string>
+     <string name="cloud_drive_files">Súbory na Mi Drive</string>
+     <string name="cloud_drive_not_login_summary">Nie ste prihlásený</string>
+     <string name="cloud_drive_settings">Nastavenia Mi Drive</string>
+     <string name="cloud_empty_hint_text">"Zatiaľ tu nič nie je.
+Skúste presunúť súbory zo zariadenia na Mi Drive."</string>
+     <string name="cloud_guide_summary_text">Automaticky synchronizovať položky do všetkých vašich zariadení</string>
+     <string name="cloud_guide_title_text">Synchronizácia s Mi Drive</string>
+     <string name="cloud_permission_storage_desc">Na ukladanie fotografií a dokumentov do zariadenia</string>
+<string name="cloud_recycle_bin">Nedávno zmazané položky</string>
+     <string name="cloud_space_full">Cloudové úložisko je plné. Navýšte svoju tarifu úložiska, aby ste mohli nahrávať ďalšie položky.</string>
+     <string name="cloud_transfer_download_error">"Nie je možné stiahnuť"</string>
+     <string name="cloud_transfer_download_loading">Sťahovanie</string>
+     <string name="cloud_transfer_downloading">Sťahovanie</string>
+     <string name="cloud_transfer_pause">Pozastavené</string>
+     <string name="cloud_transfer_upload_error">"Nie je možné nahrať"</string>
+     <string name="cloud_transfer_uploading">Nahrávanie</string>
+     <string name="cloud_transfer_wait_download">Čakanie na stiahnutie</string>
+     <string name="cloud_transfer_wait_network">Čakanie na internet</string>
+     <string name="cloud_transfer_wait_upload">Čakanie na nahranie</string>
+     <string name="copy">Kopírovať</string>
+     <string name="cta_function_account_operation">Pre rýchle prihlásenie k účtu Xiaomi</string>
+     <string name="data_consume_dialog_message">"Momentálne používate mobilné dáta. Ak budete pokračovať, bude spotrebované %s dát."</string>
+     <string name="data_consume_dialog_title">Použiť mobilné dáta?</string>
+<string name="des_hide_pwd">Skryť heslo</string>
+     <string name="des_show_pwd">Zobraziť heslo</string>
+     <string name="dialog_account_permission_denied_msg">Povoľte tejto aplikácii prístup k účtom v zariadení, aby ste sa mohli prihlásiť k Mi Drive. Toto oprávnenie môžete udeliť v Nastaveniach.</string>
+     <string name="dialog_account_permission_denied_negative_button">Zrušiť</string>
+     <string name="dialog_account_permission_denied_positive_button">Nastavenia</string>
+     <string name="dialog_account_permission_denied_title">Požadované oprávnenia</string>
+     <string name="dialog_open_mi_drive_button">Rozumiem</string>
+     <string name="dialog_open_mi_drive_err">Reštartujte Mi Drive a skúste to znova.</string>
+     <string name="dialog_open_mi_drive_title">Chyba servera</string>
+<string name="early_morning">Ráno</string>
+<string name="error_icon_content_description">Chyba</string>
+     <string name="večer">Popoludní</string>
+     <string name="exception_net_not_available">Skontrolujte nastavenia siete a skúste to znova</string>
+     <string name="expand_button_title">Pokročilé</string>
+     <string name="exposed_dropdown_menu_content_description">Zobraziť rozbaľovaciu ponuku</string>
+<string name="mi_share">Mi Share</string>
+     <string name="midnight">Noc</string>
+     <string name="midrive_display_related">Zobrazenie</string>
+     <string name="midrive_get_cloudvideo_file">Len sekundu…</string>
+     <string name="midrive_hide_recent_cloud_files">"Nezobrazovať súbory Mi Drive v Nedávnych"</string>
+     <string name="midrive_not_found">"K tejto položke sa nepodarilo získať prístup"</string>
+     <string name="midrive_overseas_unavailable">Táto funkcia je dostupná iba na čínskej pevnine.</string>
+     <string name="midrive_reset_privacy_and_check_availability_retry">"Nie je možné zapnúť Mi Drive. Skúste to znova."</string>
+     <string name="miuix_access_state_desc">Vybrané</string>
+     <string name="miuix_alphabet_indexer_name">Indexový riadok</string>
+     <string name="miuix_indexer_collect">Zbierky</string>
+     <string name="miuix_indexer_selected">Vybrané %s</string>
+     <string name="morning">Ráno</string>
+<string name="night">Večer</string>
+<string name="noon">Popoludní</string>
+<string name="open_cloud_drive">Zapnutie Mi Drive</string>
+<string name="operation_batch_failed_err">"Túto akciu nie je možné dokončiť pre viac súborov."</string>
+     <string name="operation_cache_use_data">Stiahnuť</string>
+     <string name="operation_cache_use_free_network">Počkajte na Wi-Fi</string>
+     <string name="operation_cloud_copy_to_local">Uložiť do…</string>
+     <string name="operation_create_folder_name_conflict">"Nie je možné vytvoriť zložku. Zložka s týmto názvom už existuje."</string>
+     <string name="operation_create_folder_name_illegal_char">"Nie je možné vytvoriť zložku. Názov zložky obsahuje nepodporované znaky."</string>
+     <string name="operation_create_folder_network_not_available">"Nie je možné vytvoriť priečinok. Skontrolujte nastavenia siete a skúste to znova."</string>
+     <string name="operation_create_folder_not_support_for_overseas">"Nie je možné vytvoriť zložku. Táto funkcia je dostupná iba na čínskej pevnine."</string>
+     <string name="operation_create_folder_other">"Nie je možné vytvoriť zložku"</string>
+     <string name="operation_download">Stiahnuť</string>
+     <string name="operation_download_error_no_space">Nedostatok úložiska</string>
+     <string name="operation_download_error_other">Došlo k systémovej chybe. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="operation_download_error_title">"Nie je možné stiahnuť"</string>
+     <string name="operation_editor">Upraviť</string>
+     <string name="operation_file_downloading_err">"Túto akciu nie je možné dokončiť. Počkajte na dokončenie sťahovania tohto súboru a skúste to znova."</string>
+     <string name="operation_file_exist_err">"Túto akciu nie je možné dokončiť. Tento súbor už existuje."</string>
+     <string name="operation_file_not_found_err">"Túto akciu nie je možné dokončiť. Nie je možné nájsť pôvodný súbor."</string>
+     <string name="operation_gallary">Zobraziť v galérii</string>
+     <string name="operation_no_network_err">"Nie je možné sa pripojiť k sieti. Skontrolujte nastavenia siete a skúste to znova."</string>
+     <string name="operation_not_support_err">"Túto akciu nie je možné dokončiť."</string>
+     <string name="operation_open_mode">Otvoriť pomocou</string>
+     <string name="operation_pic_to_pdf">Vytvoriť PDF</string>
+     <string name="operation_rename_err">"Nie je možné premenovať"</string>
+     <string name="operation_retry">Skúste to znova</string>
+     <string name="operation_set_pic_wallpaper">Nastaviť ako tapetu</string>
+     <string name="operation_sync_cloud_data_error">Došlo k chybe servera. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="operation_unknown_err">"Túto akciu nie je možné dokončiť."</string>
+     <string name="operation_upload_buy_space">Navýšenie</string>
+     <string name="operation_upload_delete">Zmazať</string>
+     <string name="operation_upload_err_file_not_found">"Zdá sa, že tento súbor neexistuje."</string>
+     <string name="operation_upload_err_file_size_zero">"Nie je možné nahrať prázdne súbory."</string>
+     <string name="operation_upload_err_full_space">Cloudové úložisko je plné. Navýšte svoju tarifu úložiska, aby ste mohli nahrávať ďalšie položky.</string>
+     <string name="operation_upload_err_illegal_char">Tento názov súboru obsahuje nepodporované znaky.</string>
+     <string name="operation_upload_err_larger_than_4g">"Nie je možné nahrať súbory väčšie ako %d GB."</string>
+     <string name="operation_upload_err_not_support_overseas">V tejto chvíli môžu položky nahrávať iba používatelia na čínskej pevnine.</string>
+     <string name="operation_upload_err_other">Došlo k systémovej chybe. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="operation_upload_error_title">"Nie je možné nahrať"</string>
+     <string name="operation_upload_retry">Skúste to znova</string>
+     <string name="operation_upload_save_to_local">Ukladanie do…</string>
+<string name="permission_account_desc">Pre prístup k informáciám o účte uloženým vo vašom zariadení</string>
+     <string name="permission_account_desc_pad">Pre prístup k informáciám o účte uloženým vo vašom zariadení</string>
+     <string name="permission_account_title">Prístup k účtom v zariadení</string>
+     <string name="permission_account_title_pad">Prístup k účtom v zariadení</string>
+     <string name="permission_storage_desc_pad">Na ukladanie fotografií a dokumentov do zariadenia</string>
+     <string name="permission_storage_title">Prístup k úložisku zariadenia</string>
+     <string name="permission_storage_title_pad">Prístup k úložisku zariadenia</string>
+<string name="pre_privacy_recall">Odvolanie súhlasu</string>
+<string name="pref_permission_allowed">Udelené</string>
+     <string name="pref_permission_manage_key_storage">Prístup k fotografiám a súborom v zariadení</string>
+     <string name="pref_permission_not_allowed">Nie je udelené</string>
+     <string name="preference_copied">\"%1$s\" skopírované do schránky.</string>
+     <string name="privacy_policy_renew">Aktualizované zásady ochrany osobných údajov</string>
+     <string name="privacy_policy_renew_content"><Data>"&lt;a href=\"%1$s\">Zásady ochrany súkromia&lt;/a> správca súborov boli aktualizované. Aby sme plne porozumeli vašim právam ako užívateľa a spôsobom v ktorom používame vaše údaje, prečítajte si a odsúhlaste novú verziu zásad ochrany osobných údajov, než budete pokračovať.“</Data></string>
+     <string name="privacy_recall_success">Súhlas bol úspešne odvolaný</string>
+     <string name="privacy_recall_title">Odvolanie súhlasu</string>
+     <string name="privacy_recalling">Odvolávanie súhlasu…</string>
+<string name="update_no_network">"Nie je možné sa pripojiť k sieti. Skontrolujte nastavenia siete a skúste to znova."</string>
+     <string name="upload_user_photo">Nahrať</string>
+     <string name="use_mobile_data_update_summary">Používať mobilné dáta na automatickú synchronizáciu zmien súborov stiahnutých z Mi Drive</string>
+     <string name="use_mobile_data_update_title">Použitie mobilných dát na synchronizáciu</string>          
 </resources>
