--- a/Slovak/main/Telecom.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Telecom.apk/res/values-sk/strings.xml
@@ -509,4 +509,18 @@ Ak chcete pokračovať, stlačte tlačidlo Vymazať a konvertovať…"</string>
     <string name="wifi_verbose_logging_summary">Zvýšiť úroveň denníkov Wi-Fi, zobrazovať podľa SSID RSSI pri výbere siete Wi-Fi</string>
     <string name="window_animation_scale_title">Mierka animácie okna</string>
     <string name="yesterday">Včera</string>
+    
+<string name="notification_AllMissedCallTitle">Všetky zmeškané hovory</string>
+     <string name="notification_audioProcessing_body">%s umiestnil volanie do pozadia. Táto aplikácia môže pristupovať a prehrávať zvuk počas hovoru.</string>
+     <string name="notification_audioProcessing_title">Volanie na pozadí</string>
+     <string name="notification_channel_background_calls">Volanie na pozadí</string>
+     <string name="notification_channel_call_blocking">Blokovanie hovorov</string>
+     <string name="notification_channel_disconnected_calls">Odpojené hovory</string>
+     <string name="notification_channel_in_call_service_crash">Pády telefónnych aplikácií</string>
+     <string name="notification_channel_missed_call_DND">Nerušiť</string>
+     <string name="notification_disconnectedCall_body">Volanie na %s bolo prerušené z dôvodu uskutočnenia tiesňového volania.</string>
+     <string name="notification_disconnectedCall_generic_body">Váš hovor bol odpojený z dôvodu tiesňového volania.</string>
+     <string name="notification_disconnectedCall_title">Odpojený hovor</string>
+     <string name="notification_incallservice_not_responding_body">Váš hovor použil telefónnu aplikáciu, ktorá bola dodaná s vaším zariadením</string>
+     <string name="notification_incallservice_not_responding_title">%s prestal reagovať</string>    
 </resources>
